--- a/views/productionhistory/productionhistory.ejs
+++ b/views/productionhistory/productionhistory.ejs
@@ -59,6 +59,8 @@
                             <th>Quantity</th>
                             <th>Product</th>
                             <th>Supervisor</th>
+                            <th>Notes</th>
+                            <th>Timestamp</th>
                             <th>Status</th>
                         </tr>
                     </thead>
