--- a/views/materialhistory/display.ejs
+++ b/views/materialhistory/display.ejs
@@ -94,6 +94,7 @@
                                         <th class="text-left col-2">Material</th>
                                         <th class="text-left col-1">Quantity</th>
                                         <th class="text-left col-1">Type</th>
+                                        <th class="text-left col-1">Notes</th>
                                         <th class="text-left col-1">Stocks Before</th>
                                         <th class="text-left col-1">Stocks After</th>
                                         <th class="text-left col-2">Date</th>
