--- a/views/sidebar.ejs
+++ b/views/sidebar.ejs
@@ -315,6 +315,10 @@
             <i class="far fa-circle mr-1 sb-icon-clr"></i>
             <span>Material Inventory</span>
           </a>
+          <a class="collapse-item" href="/materialstockadjustment">
+            <i class="far fa-circle mr-1 sb-icon-clr"></i>
+            <span>Material Stock Adjustment</span>
+          </a>
           <a class="collapse-item" href="/productioninventory">
             <i class="far fa-circle mr-1 sb-icon-clr"></i>
             <span>Production Inventory</span>
