--- a/views/materialcount/materialcountscripts.ejs
+++ b/views/materialcount/materialcountscripts.ejs
@@ -61,7 +61,7 @@
                     url: '/materialcount/save',
                     data: {
                         materialdata: materialdata,
-                        status: 'ADJUSTMENT',
+                        status: 'NEW',
                     },
                     success: function (result) {
                         if (result.msg == 'success') {
