Revise Report Procurement
-added not complete status on purchase order
-added feature that user can partialy field orders until it completes the order

--- a/views/purchaseorder/purchaseorder.ejs
+++ b/views/purchaseorder/purchaseorder.ejs
@@ -90,9 +90,10 @@
                                 <thead class="table-header">
                                     <tr>
                                         <th class="col-1">Order ID</th>
-                                        <th class="col-4">Description</th>
+                                        <th class="col-3">Description</th>
                                         <th class="col-1">Material ID</th>
                                         <th class="col-3">Expected Quantity</th>
+                                        <th class="col-1">Received Quantity</th>
                                         <th class="col-3">Report Quantity</th>
                                     </tr>
                                 </thead>
