Added Complete Purchase Order

--- a/views/purchaseorder/purchaseorder.ejs
+++ b/views/purchaseorder/purchaseorder.ejs
@@ -105,7 +105,7 @@
                     </div>
                 </div>
             </div>
-            <div class="modal-footer">
+            <div class="modal-footer" id="reportFooter">
                 <button type="button" class="btn btn-outline-inventory" data-dismiss="modal">Close</button>
                 <button type="button" class="btn btn-outline-inventory" id="submitPurchaseOrder">
                     <span id="reportLabel">Report</span>
