Added splitpayment API
-revise viewing of sales details

--- a/views/products/products.ejs
+++ b/views/products/products.ejs
@@ -182,7 +182,7 @@
                                 <div class="align-img">
                                     <img
                                     id="productimage"
-                                    src="/images/img/asvesti.png"
+                                    src="/images/img/upload.jpg"
                                     class="img-thumbnail "
                                     alt="..."
                                 />
