--- a/views/sidebar.ejs
+++ b/views/sidebar.ejs
@@ -13,7 +13,7 @@
     <div class="sidebar-brand-icon">
       <img src="/images/img/asvesti.png" class="custom-img mt-1 mb-1" alt="Responsive image" />
     </div>
-    <div class="sidebar-brand-text mx-3 text-white">Asvesti</div>
+    <div class="sidebar-brand-text mx-3 text-white"><%= title %></div>
   </a>
 
   <!-- Divider -->
