--- a/views/sidebar.ejs
+++ b/views/sidebar.ejs
@@ -7,7 +7,7 @@
   <% } else if (accesstype === "Production" || accesstype === "production") { %>
     <a class="sidebar-brand d-flex align-items-center justify-content-center" href="/production">
   <% } else { %>
-    <a class="sidebar-brand d-flex align-items-center justify-content-center" href="/">
+    <a class="sidebar-brand d-flex align-items-center justify-content-center" href="/dashboard">
   <% } %>
 
     <div class="sidebar-brand-icon">
@@ -68,7 +68,7 @@
 
     <!-- Nav Item - Dashboard -->
     <li class="nav-item mt-2">
-      <a class="nav-link" href="/">
+      <a class="nav-link" href="/dashboard">
         <i class="fas fa-chart-bar"></i>
         <span class="text-white">Dashboard</span></a>
     </li>
