--- a/views/scripts.ejs
+++ b/views/scripts.ejs
@@ -49,8 +49,8 @@
 <!-- SWAL-->
 <script src="/javascripts/sweetalert.min.js"></script>
 
-<!-- Toastr-->
-<script src="/javascripts/toastr.min.js"></script>
+<!-- Toastr
+<script src="/javascripts/toastr.min.js"></script> -->
 
 <!-- DATE RANGE PICKER -->
 <script
