Added Summary Sales

--- a/views/dashboard/dashboard.ejs
+++ b/views/dashboard/dashboard.ejs
@@ -1,10 +1,14 @@
 <!-- Begin PCreated by Content -->
 <div class="container-fluid">
     <div class="row mb-2 mt-2">
-        <div class="col-md-7">
+        <div class="col-md-6">
             <span class="h3" id="dashboard-branch-name" style="color: rgb(17, 146, 146);"></span>
         </div>
+        <div class="col-md-1">
+            <button class="btn btn-outline-inventory" id="downloadSalesSummary"><i class="fas fa-download"></i> Download</button>
+        </div>
         <div class="col-md-3">
+           
             <div class="input-group shadow">
                 <button id="adjustDateBackward" class="btn btn-outline-inventory custom-br-left"><i
                         class="fas fa-caret-left"></i></button>
