Revise Download Sales Summary

--- a/views/dashboard/dashboard.ejs
+++ b/views/dashboard/dashboard.ejs
@@ -4,9 +4,9 @@
         <div class="col-md-6">
             <span class="h3" id="dashboard-branch-name" style="color: rgb(17, 146, 146);"></span>
         </div>
-        <!-- <div class="col-md-1">
+        <div class="col-md-1">
             <button class="btn btn-outline-inventory" id="downloadSalesSummary"><i class="fas fa-download"></i> Download</button>
-        </div> -->
+        </div>
         <div class="col-md-3">
            
             <div class="input-group shadow">
