Remove Console Logs with big data

--- a/views/salesdetails/salesdetailsscripts.ejs
+++ b/views/salesdetails/salesdetailsscripts.ejs
@@ -130,7 +130,8 @@
             const detailsId = item.ornumber
             const date = ConvertDate(item.ordate)
             const items = JSON.parse(item.ordescription)
-            let overAllTotal = console.log(count, methods)
+            let overAllTotal = 0
+            console.log(count, methods)
 
             if (count != 0) {
               
