--- a/views/sidebar.ejs
+++ b/views/sidebar.ejs
@@ -284,6 +284,16 @@
             <i class="far fa-circle mr-1 sb-icon-clr"></i>
             <span>Production Transfer</span>
           </a>
+
+          <h6 class="collapse-header ">History:</h6>
+          <a class="collapse-item" href="/purchaseorderhistory">
+            <i class="far fa-circle mr-1 sb-icon-clr"></i>
+            <span>Purchase Order</span>
+          </a>
+          <a class="collapse-item" href="/transferorderhistory">
+            <i class="far fa-circle mr-1 sb-icon-clr"></i>
+            <span>Transfer Orders</span>
+          </a>
         </div>
       </div>
     </li>
