--- a/views/production/productionscripts.ejs
+++ b/views/production/productionscripts.ejs
@@ -94,6 +94,7 @@
                   url: '/production/status/complete',
                   data: {
                     productionid: productionid,
+                    productid: productid,
                     quantity: parseFloat(producedquantity),
                   },
                   success: function (result) {
